# API_shortening_links

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/v1/: auth.py  links.py  users.py
app/db/: crud.py  redis_cache.py  session.py
app/models/: link.py  user.py
app/schemas/: link.py  user.py
app/services/: auth_service.py  links_service.py  user_service.py
app/settings/: config.py
tests/: conftest.py  test_auth.py  test_links.py  test_users.py
